# tinyrag

./: README.md  main.py  pyproject.toml  rag.py
corpus/: doc1.txt  doc2.txt  doc3.txt  doc4.txt
